# mathsolver_pro

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci-new.yml  ci.yml
benchmarks/: benchmark_algebra.py  benchmark_calculus.py  benchmark_financial.py  benchmark_geometry.py  benchmark_statistics.py
examples/: usage_algebra.py  usage_calculus.py  usage_financial.py  usage_geometry.py  usage_statistics.py
mathsolver_pro/: __init__.py  algebra.py  calculus.py  financial.py  geometry.py  statistics.py
mathsolver_pro/_fast/: __init__.py
mathsolver_pro/tests/: test_algebra.py  test_calculus.py  test_financial.py  test_geometry.py  test_statistics.py
notebooks/: MathSolverPro_Financial_Analytics.ipynb
