[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathsolver-pro"
version = "0.1.0"
description = "Advanced modular math library: algebra, statistics, calculus, geometry, financial engineering."
authors = [
    { name = "Samuel Zocchi", email = "samuel.zocchi@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
